--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --config webpack.production.config.js --progress --profile --colors",
     "start": "webpack-dev-server --progress --profile --colors",
-    "lint": "eslint --ext js --ext jsx src || exit 0"
+    "lint": "eslint --ext js --ext jsx src || exit 0",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,7 @@
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "jest-cli": "^17.0.0",
     "postcss-loader": "^1.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "0.13.1",
@@ -45,5 +47,8 @@
     "webpack": "1.13.2",
     "webpack-cleanup-plugin": "^0.4.1",
     "webpack-dev-server": "1.16.2"
+  },
+  "jest" : {
+    "testEnvironment" : "node"
   }
 }
