--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^3.10.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-tap-event-plugin": "^1.0.0",
     "sass-loader": "^4.0.2"
   },
@@ -35,20 +36,24 @@
     "babel-preset-react": "6.16.0",
     "babel-runtime": "^6.11.6",
     "css-loader": "0.25.0",
+    "eslint": "^3.10.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "jest-cli": "^17.0.0",
     "postcss-loader": "^1.0.0",
-    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-cleanup-plugin": "^0.4.1",
     "webpack-dev-server": "1.16.2"
   },
-  "jest" : {
-    "testEnvironment" : "node"
+  "jest": {
+    "testEnvironment": "node"
   }
 }
