implemented basic google login including database entries for user accounts

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "homepage": "https://github.com/calebhsu/CoMake#readme",
   "dependencies": {
+    "firebase": "^3.6.6",
     "material-ui": "^0.16.1",
     "node-sass": "^3.10.1",
     "react": "15.3.2",
