--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0",
     "sass-loader": "^4.0.2"
   },
   "devDependencies": {
