--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-router": "^3.0.2",
     "react-tap-event-plugin": "^1.0.0",
+    "reflexbox": "^2.2.3",
     "sass-loader": "^4.0.2"
   },
   "devDependencies": {
