--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^4.0.2"
   },
   "devDependencies": {
