readjusting the backend to use express instead of nodal to allow for potential https support, hooking backend service to firebase

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ public
 
 # Dependencies
 node_modules
+
+#Server files (Private Key/Certificate for HTTPS setup on backend)
+*.pem
+backend/serverFiles
