--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "backend",
-  "version": "0.0.0",
-  "description": "backend",
-  "author": "CoMake Team",
-  "main": "cluster.js",
-  "engines": {
-    "node": "6.0.0"
+  "name": "comake-backend",
+  "version": "1.0.0",
+  "description": "Backend Service for CoMake",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/calebhsu/CoMake.git"
+  },
+  "author": "CoMake Team",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/calebhsu/CoMake/issues"
+  },
+  "homepage": "https://github.com/calebhsu/CoMake#readme",
   "dependencies": {
-    "nodal": "0.13.0"
+    "express": "^4.14.1",
+    "file-system": "^2.2.2",
+    "firebase-admin": "^4.0.6",
+    "https": "^1.0.0"
   },
   "devDependencies": {
-    "chai": "~3.5.0",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^3.10.1",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "mocha": "~2.4.5"
-  },
-  "scripts": {
-    "test": "mocha ./test/runner.js",
-    "start": "node cluster.js",
-    "worker": "node worker.js"
-  },
-  "private": true
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1"
+  }
 }
