updating client package, moving security folder, adding nodemon for server dev

--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Service for CoMake",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1"
+    "eslint-plugin-react": "^6.7.1",
+    "nodemon": "^1.11.0"
   }
 }
