--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "material-ui": "^0.16.1",
     "node-sass": "^3.10.1",
     "react": "15.3.2",
-    "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.3.2",
+    "react-draggable": "^2.2.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.2",
+    "react-resizable": "^1.6.0",
+    "react-rnd": "^4.2.0",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
