--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "homepage": "https://github.com/calebhsu/CoMake#readme",
   "dependencies": {
+    "comake-services": "^1.0.3",
+    "firebase": "^3.6.8",
     "material-ui": "^0.16.1",
     "node-sass": "^3.10.1",
     "react": "15.3.2",
