updating travis config file to handle tests for website and backend

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ node_js:
   - "5"
   - "4"
   - "node"
-before_install:
-  - cd website
+env:
+  - DIR=website
+  - DIR=backend/server
+script: cd $DIR && npm install && npm test
