--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ public
 # Dependencies
 node_modules
 
+#Mac OS directory files
+*.DS_Store
+
 #Security files (Private Key,Certificate, etc for backend)
 backend/server/security
