--- a/website/package.json
+++ b/website/package.json
@@ -17,21 +17,28 @@
   "license": "MIT",
   "homepage": "https://github.com/calebhsu/CoMake#readme",
   "dependencies": {
+    "material-ui": "^0.16.7",
     "comake-services": "^1.0.3",
     "firebase": "^3.6.8",
-    "material-ui": "^0.16.1",
     "node-sass": "^3.10.1",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-draggable": "^2.2.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^5.0.2",
+    "react-resizable": "^1.6.0",
+    "react-rnd": "^4.2.0",
     "react-router": "^3.0.2",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "reflexbox": "^2.2.3",
     "sass-loader": "^4.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
     "babel-core": "6.17.0",
+    "babel-jest": "^18.0.0",
     "babel-loader": "6.2.7",
     "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -49,6 +56,7 @@
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "jest": "^18.1.0",
     "jest-cli": "^17.0.0",
     "postcss-loader": "^1.0.0",
     "style-loader": "0.13.1",
