updating so travis ci will run client-pkg tests as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ node_js:
   - "node"
 env:
   - DIR=website
+  - DIR=backend/client-pkg
   - DIR=backend/server
 script: cd $DIR && npm install && npm test
