--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/calebhsu/CoMake#readme",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "file-system": "^2.2.2",
     "firebase-admin": "^4.0.6",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^3.10.1",
