--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Service for CoMake",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "jest"
   },
   "repository": {
