--- a/backend/client-pkg/package.json
+++ b/backend/client-pkg/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest --testPathPattern=unit"
   },
   "repository": {
     "type": "git",
