--- a/backend/client-pkg/package.json
+++ b/backend/client-pkg/package.json
@@ -1,11 +1,11 @@
 {
   "name": "comake-services",
-  "version": "1.0.3",
+  "version": "1.0.11",
   "description": "Client-side service code for CoMake",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "jest --testPathPattern=unit"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,9 @@
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1"
+    "eslint-plugin-react": "^6.7.1",
+    "firebase": "^3.6.9",
+    "jest": "^18.1.0"
   },
   "dependencies": {
     "http": "0.0.0"
