--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend Service for CoMake",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "start": "node index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/calebhsu/CoMake#readme",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "file-system": "^2.2.2",
     "firebase-admin": "^4.0.6",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^3.10.1",
@@ -29,6 +31,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
+    "jest": "^18.1.0",
     "nodemon": "^1.11.0"
   }
 }
