--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
     "material-ui": "^0.16.7",
     "node-sass": "^3.10.1",
     "react": "^15.4.2",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.4.2",
     "react-draggable": "^2.2.3",
     "react-hot-loader": "^3.0.0-beta.6",
