--- a/website/package.json
+++ b/website/package.json
@@ -32,6 +32,7 @@
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-persist": "^4.4.2",
     "redux-thunk": "^2.2.0",
     "reflexbox": "^2.2.3",
     "sass-loader": "^4.0.2"
