--- a/website/package.json
+++ b/website/package.json
@@ -17,8 +17,13 @@
   "license": "MIT",
   "homepage": "https://github.com/calebhsu/CoMake#readme",
   "dependencies": {
+    "chai": "^3.5.0",
     "comake-services": "^1.0.10",
+    "craftml": "^1.9.2-alpha-1",
     "firebase": "^3.6.8",
+    "json": "^9.0.6",
+    "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
     "material-ui": "^0.16.7",
     "node-sass": "^3.10.1",
     "react": "~15.3.1",
