--- a/website/package.json
+++ b/website/package.json
@@ -33,6 +33,7 @@
     "react-tap-event-plugin": "~1.0.0",
     "redux": "^3.6.0",
     "redux-persist": "^4.4.2",
+    "redux-responsive": "^4.1.1",
     "redux-thunk": "^2.2.0",
     "reflexbox": "^2.2.3",
     "sass-loader": "^4.0.2"
